// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MemberQuestionCard > snapshots the English copy 1`] = `
<div>
  <div
    class="frame"
    data-question-key="q:q-1"
  >
    <section
      aria-label="Remote · 王小明"
      class="card"
    >
      <header
        class="banner"
      >
        <div
          class="originRow"
        >
          <span
            class="remoteTag"
          >
            Remote
          </span>
          <span
            class="asker"
          >
            <span
              aria-hidden="true"
              class="avatarFallback"
            >
              王
            </span>
            <span
              class="askerName"
            >
              王小明
            </span>
            <span
              class="roleBadge"
            >
              Admin
            </span>
          </span>
          <span
            class="countdown"
          >
            ⏳ 00:02:05
          </span>
        </div>
        <div
          class="contextRow"
        >
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              Project
            </span>
            千帆平台
          </span>
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              From session
            </span>
            整理迭代计划
          </span>
        </div>
        <div
          class="background"
        >
          <span
            class="contextLabel"
          >
            Background
          </span>
          <p
            class="backgroundText"
          >
            该成员近 30 天无提交记录。
          </p>
        </div>
        <div
          class="references"
        >
          <span
            class="contextLabel"
          >
            Materials
          </span>
          <div
            class="chips"
          >
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                roster.md
              </span>
              <span
                class="chipReason"
              >
                当前成员名单与角色
              </span>
            </button>
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                activity.csv
              </span>
              <span
                class="chipReason"
              >
                近 30 天活跃度
              </span>
            </button>
          </div>
        </div>
      </header>
      <div
        class="body"
        data-member-presentation="true"
      >
        <fieldset
          class="mutationScope"
          role="presentation"
        >
          <div
            class="frame"
            data-question-key="q:q-1"
          >
            <section
              aria-labelledby="question-q:q-1-0"
              class="card"
            >
              <header
                class="header"
              >
                <div
                  class="headingBlock"
                >
                  <div
                    class="eyebrow"
                  >
                    成员管理
                  </div>
                  <h2
                    class="title"
                    id="question-q:q-1-0"
                  >
                    将王小明移出项目吗？
                  </h2>
                </div>
                <div
                  class="headerActions"
                >
                  <button
                    aria-expanded="true"
                    aria-label="Collapse the question card"
                    class="iconButton"
                    title="Collapse the question card"
                    type="button"
                  >
                    <svg
                      data-content="6506c885"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                  <button
                    aria-label="Dismiss all questions"
                    class="iconButton"
                    title="Dismiss all questions"
                    type="button"
                  >
                    <svg
                      data-content="b94f78dd"
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
              </header>
              <div
                class="body"
                data-question-scroll="true"
              >
                <div
                  class="detail"
                >
                  <div
                    class="markdown"
                  >
                    <p>
                      该成员近 30 天无提交记录。
                    </p>
                  </div>
                </div>
                <div
                  class="options"
                  role="radiogroup"
                >
                  <button
                    aria-checked="false"
                    aria-label="移出"
                    class="option"
                    role="radio"
                    type="button"
                  >
                    <span
                      class="number"
                    >
                      1
                    </span>
                    <span
                      class="optionCopy"
                    >
                      <span
                        class="optionLine"
                      >
                        <span
                          class="optionLabel"
                        >
                          移出
                        </span>
                        <span
                          class="badge"
                        >
                          Recommended
                        </span>
                        <span
                          class="description"
                        >
                          收回项目访问权。
                        </span>
                      </span>
                    </span>
                  </button>
                  <button
                    aria-checked="false"
                    aria-label="保留"
                    class="option"
                    role="radio"
                    type="button"
                  >
                    <span
                      class="number"
                    >
                      2
                    </span>
                    <span
                      class="optionCopy"
                    >
                      <span
                        class="optionLine"
                      >
                        <span
                          class="optionLabel"
                        >
                          保留
                        </span>
                        <span
                          class="description"
                        >
                          保持只读成员身份。
                        </span>
                      </span>
                    </span>
                  </button>
                  <div
                    class="customRow"
                  >
                    <span
                      aria-hidden="true"
                      class="number"
                    >
                      <svg
                        data-content="80a2f989"
                        fill="none"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </span>
                    <div
                      class="field customInline"
                    >
                      <div
                        aria-hidden="true"
                        class="fieldMirror"
                      />
                      <textarea
                        class="fieldInput"
                        placeholder="Type your answer"
                        rows="1"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <footer
                class="footer"
              >
                <div
                  class="pager"
                >
                  <button
                    aria-label="Previous question"
                    class="iconButton"
                    disabled=""
                    type="button"
                  >
                    <svg
                      data-content="710b3749"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                  <span
                    class="progress"
                  >
                    1
                    /
                    1
                  </span>
                  <button
                    aria-label="Next question"
                    class="iconButton"
                    disabled=""
                    type="button"
                  >
                    <svg
                      data-content="12556b6e"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
                <div
                  class="feedback"
                  role="status"
                />
                <div
                  class="footerActions"
                >
                  <button
                    class="button outline md"
                    type="button"
                  >
                    Skip this question
                  </button>
                  <button
                    class="button primary md"
                    disabled=""
                    type="button"
                  >
                    Submit
                  </button>
                </div>
              </footer>
            </section>
          </div>
        </fieldset>
      </div>
    </section>
  </div>
</div>
`;

exports[`MemberQuestionCard > snapshots the full banner and the shared presentation (light) 1`] = `
<div>
  <div
    class="frame"
    data-question-key="q:q-1"
  >
    <section
      aria-label="远端 · 王小明"
      class="card"
    >
      <header
        class="banner"
      >
        <div
          class="originRow"
        >
          <span
            class="remoteTag"
          >
            远端
          </span>
          <span
            class="asker"
          >
            <span
              aria-hidden="true"
              class="avatarFallback"
            >
              王
            </span>
            <span
              class="askerName"
            >
              王小明
            </span>
            <span
              class="roleBadge"
            >
              管理员
            </span>
          </span>
          <span
            class="countdown"
          >
            ⏳ 00:02:05
          </span>
        </div>
        <div
          class="contextRow"
        >
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              项目
            </span>
            千帆平台
          </span>
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              来源会话
            </span>
            整理迭代计划
          </span>
        </div>
        <div
          class="background"
        >
          <span
            class="contextLabel"
          >
            背景
          </span>
          <p
            class="backgroundText"
          >
            该成员近 30 天无提交记录。
          </p>
        </div>
        <div
          class="references"
        >
          <span
            class="contextLabel"
          >
            材料
          </span>
          <div
            class="chips"
          >
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                roster.md
              </span>
              <span
                class="chipReason"
              >
                当前成员名单与角色
              </span>
            </button>
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                activity.csv
              </span>
              <span
                class="chipReason"
              >
                近 30 天活跃度
              </span>
            </button>
          </div>
        </div>
      </header>
      <div
        class="body"
        data-member-presentation="true"
      >
        <fieldset
          class="mutationScope"
          role="presentation"
        >
          <div
            class="frame"
            data-question-key="q:q-1"
          >
            <section
              aria-labelledby="question-q:q-1-0"
              class="card"
            >
              <header
                class="header"
              >
                <div
                  class="headingBlock"
                >
                  <div
                    class="eyebrow"
                  >
                    成员管理
                  </div>
                  <h2
                    class="title"
                    id="question-q:q-1-0"
                  >
                    将王小明移出项目吗？
                  </h2>
                </div>
                <div
                  class="headerActions"
                >
                  <button
                    aria-expanded="true"
                    aria-label="收起问题卡片"
                    class="iconButton"
                    title="收起问题卡片"
                    type="button"
                  >
                    <svg
                      data-content="6506c885"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                  <button
                    aria-label="放弃整组问题"
                    class="iconButton"
                    title="放弃整组问题"
                    type="button"
                  >
                    <svg
                      data-content="b94f78dd"
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
              </header>
              <div
                class="body"
                data-question-scroll="true"
              >
                <div
                  class="detail"
                >
                  <div
                    class="markdown"
                  >
                    <p>
                      该成员近 30 天无提交记录。
                    </p>
                  </div>
                </div>
                <div
                  class="options"
                  role="radiogroup"
                >
                  <button
                    aria-checked="false"
                    aria-label="移出"
                    class="option"
                    role="radio"
                    type="button"
                  >
                    <span
                      class="number"
                    >
                      1
                    </span>
                    <span
                      class="optionCopy"
                    >
                      <span
                        class="optionLine"
                      >
                        <span
                          class="optionLabel"
                        >
                          移出
                        </span>
                        <span
                          class="badge"
                        >
                          推荐
                        </span>
                        <span
                          class="description"
                        >
                          收回项目访问权。
                        </span>
                      </span>
                    </span>
                  </button>
                  <button
                    aria-checked="false"
                    aria-label="保留"
                    class="option"
                    role="radio"
                    type="button"
                  >
                    <span
                      class="number"
                    >
                      2
                    </span>
                    <span
                      class="optionCopy"
                    >
                      <span
                        class="optionLine"
                      >
                        <span
                          class="optionLabel"
                        >
                          保留
                        </span>
                        <span
                          class="description"
                        >
                          保持只读成员身份。
                        </span>
                      </span>
                    </span>
                  </button>
                  <div
                    class="customRow"
                  >
                    <span
                      aria-hidden="true"
                      class="number"
                    >
                      <svg
                        data-content="80a2f989"
                        fill="none"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </span>
                    <div
                      class="field customInline"
                    >
                      <div
                        aria-hidden="true"
                        class="fieldMirror"
                      />
                      <textarea
                        class="fieldInput"
                        placeholder="输入你的答案"
                        rows="1"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <footer
                class="footer"
              >
                <div
                  class="pager"
                >
                  <button
                    aria-label="上一题"
                    class="iconButton"
                    disabled=""
                    type="button"
                  >
                    <svg
                      data-content="710b3749"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                  <span
                    class="progress"
                  >
                    1
                    /
                    1
                  </span>
                  <button
                    aria-label="下一题"
                    class="iconButton"
                    disabled=""
                    type="button"
                  >
                    <svg
                      data-content="12556b6e"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
                <div
                  class="feedback"
                  role="status"
                />
                <div
                  class="footerActions"
                >
                  <button
                    class="button outline md"
                    type="button"
                  >
                    跳过本题
                  </button>
                  <button
                    class="button primary md"
                    disabled=""
                    type="button"
                  >
                    提交
                  </button>
                </div>
              </footer>
            </section>
          </div>
        </fieldset>
      </div>
    </section>
  </div>
</div>
`;

exports[`MemberQuestionCard > snapshots the full banner under the dark theme attribute 1`] = `
<div>
  <div
    class="frame"
    data-question-key="q:q-1"
  >
    <section
      aria-label="远端 · 王小明"
      class="card"
    >
      <header
        class="banner"
      >
        <div
          class="originRow"
        >
          <span
            class="remoteTag"
          >
            远端
          </span>
          <span
            class="asker"
          >
            <span
              aria-hidden="true"
              class="avatarFallback"
            >
              王
            </span>
            <span
              class="askerName"
            >
              王小明
            </span>
            <span
              class="roleBadge"
            >
              管理员
            </span>
          </span>
          <span
            class="countdown"
          >
            ⏳ 00:02:05
          </span>
        </div>
        <div
          class="contextRow"
        >
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              项目
            </span>
            千帆平台
          </span>
          <span
            class="contextItem"
          >
            <span
              class="contextLabel"
            >
              来源会话
            </span>
            整理迭代计划
          </span>
        </div>
        <div
          class="background"
        >
          <span
            class="contextLabel"
          >
            背景
          </span>
          <p
            class="backgroundText"
          >
            该成员近 30 天无提交记录。
          </p>
        </div>
        <div
          class="references"
        >
          <span
            class="contextLabel"
          >
            材料
          </span>
          <div
            class="chips"
          >
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                roster.md
              </span>
              <span
                class="chipReason"
              >
                当前成员名单与角色
              </span>
            </button>
            <button
              class="chip"
              type="button"
            >
              <span
                class="chipFilename"
              >
                activity.csv
              </span>
              <span
                class="chipReason"
              >
                近 30 天活跃度
              </span>
            </button>
          </div>
        </div>
      </header>
      <div
        class="body"
        data-member-presentation="true"
      >
        <fieldset
          class="mutationScope"
          role="presentation"
        >
          <div
            class="frame"
            data-question-key="q:q-1"
          >
            <section
              aria-labelledby="question-q:q-1-0"
              class="card"
            >
              <header
                class="header"
              >
                <div
                  class="headingBlock"
                >
                  <div
                    class="eyebrow"
                  >
                    成员管理
                  </div>
                  <h2
                    class="title"
                    id="question-q:q-1-0"
                  >
                    将王小明移出项目吗？
                  </h2>
                </div>
                <div
                  class="headerActions"
                >
                  <button
                    aria-expanded="true"
                    aria-label="收起问题卡片"
                    class="iconButton"
                    title="收起问题卡片"
                    type="button"
                  >
                    <svg
                      data-content="6506c885"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                  <button
                    aria-label="放弃整组问题"
                    class="iconButton"
                    title="放弃整组问题"
                    type="button"
                  >
                    <svg
                      data-content="b94f78dd"
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
              </header>
              <div
                class="body"
                data-question-scroll="true"
              >
                <div
                  class="detail"
                >
                  <div
                    class="markdown"
                  >
                    <p>
                      该成员近 30 天无提交记录。
                    </p>
                  </div>
                </div>
                <div
                  class="options"
                  role="radiogroup"
                >
                  <button
                    aria-checked="false"
                    aria-label="移出"
                    class="option"
                    role="radio"
                    type="button"
                  >
                    <span
                      class="number"
                    >
                      1
                    </span>
                    <span
                      class="optionCopy"
                    >
                      <span
                        class="optionLine"
                      >
                        <span
                          class="optionLabel"
                        >
                          移出
                        </span>
                        <span
                          class="badge"
                        >
                          推荐
                        </span>
                        <span
                          class="description"
                        >
                          收回项目访问权。
                        </span>
                      </span>
                    </span>
                  </button>
                  <button
                    aria-checked="false"
                    aria-label="保留"
                    class="option"
                    role="radio"
                    type="button"
                  >
                    <span
                      class="number"
                    >
                      2
                    </span>
                    <span
                      class="optionCopy"
                    >
                      <span
                        class="optionLine"
                      >
                        <span
                          class="optionLabel"
                        >
                          保留
                        </span>
                        <span
                          class="description"
                        >
                          保持只读成员身份。
                        </span>
                      </span>
                    </span>
                  </button>
                  <div
                    class="customRow"
                  >
                    <span
                      aria-hidden="true"
                      class="number"
                    >
                      <svg
                        data-content="80a2f989"
                        fill="none"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </span>
                    <div
                      class="field customInline"
                    >
                      <div
                        aria-hidden="true"
                        class="fieldMirror"
                      />
                      <textarea
                        class="fieldInput"
                        placeholder="输入你的答案"
                        rows="1"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <footer
                class="footer"
              >
                <div
                  class="pager"
                >
                  <button
                    aria-label="上一题"
                    class="iconButton"
                    disabled=""
                    type="button"
                  >
                    <svg
                      data-content="710b3749"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                  <span
                    class="progress"
                  >
                    1
                    /
                    1
                  </span>
                  <button
                    aria-label="下一题"
                    class="iconButton"
                    disabled=""
                    type="button"
                  >
                    <svg
                      data-content="12556b6e"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
                <div
                  class="feedback"
                  role="status"
                />
                <div
                  class="footerActions"
                >
                  <button
                    class="button outline md"
                    type="button"
                  >
                    跳过本题
                  </button>
                  <button
                    class="button primary md"
                    disabled=""
                    type="button"
                  >
                    提交
                  </button>
                </div>
              </footer>
            </section>
          </div>
        </fieldset>
      </div>
    </section>
  </div>
</div>
`;

exports[`MemberQuestionCard > snapshots the identity-lite banner and the folded strip 1`] = `
<div>
  <div
    class="frame"
    data-question-key="q:q-1"
  >
    <section
      aria-label="远端 · 成员"
      class="card"
    >
      <header
        class="banner"
      >
        <div
          class="originRow"
        >
          <span
            class="remoteTag"
          >
            远端
          </span>
        </div>
        <div
          class="background"
        >
          <span
            class="contextLabel"
          >
            背景
          </span>
          <p
            class="backgroundText"
          >
            该成员近 30 天无提交记录。
          </p>
        </div>
      </header>
      <div
        class="body"
        data-member-presentation="true"
      >
        <fieldset
          class="mutationScope"
          role="presentation"
        >
          <div
            class="frame"
            data-question-key="q:q-1"
          >
            <section
              aria-labelledby="question-q:q-1-0"
              class="card"
            >
              <header
                class="header"
              >
                <div
                  class="headingBlock"
                >
                  <div
                    class="eyebrow"
                  >
                    成员管理
                  </div>
                  <h2
                    class="title"
                    id="question-q:q-1-0"
                  >
                    将王小明移出项目吗？
                  </h2>
                </div>
                <div
                  class="headerActions"
                >
                  <button
                    aria-expanded="true"
                    aria-label="收起问题卡片"
                    class="iconButton"
                    title="收起问题卡片"
                    type="button"
                  >
                    <svg
                      data-content="6506c885"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                  <button
                    aria-label="放弃整组问题"
                    class="iconButton"
                    title="放弃整组问题"
                    type="button"
                  >
                    <svg
                      data-content="b94f78dd"
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
              </header>
              <div
                class="body"
                data-question-scroll="true"
              >
                <div
                  class="detail"
                >
                  <div
                    class="markdown"
                  >
                    <p>
                      该成员近 30 天无提交记录。
                    </p>
                  </div>
                </div>
                <div
                  class="options"
                  role="radiogroup"
                >
                  <button
                    aria-checked="false"
                    aria-label="移出"
                    class="option"
                    role="radio"
                    type="button"
                  >
                    <span
                      class="number"
                    >
                      1
                    </span>
                    <span
                      class="optionCopy"
                    >
                      <span
                        class="optionLine"
                      >
                        <span
                          class="optionLabel"
                        >
                          移出
                        </span>
                        <span
                          class="badge"
                        >
                          推荐
                        </span>
                        <span
                          class="description"
                        >
                          收回项目访问权。
                        </span>
                      </span>
                    </span>
                  </button>
                  <button
                    aria-checked="false"
                    aria-label="保留"
                    class="option"
                    role="radio"
                    type="button"
                  >
                    <span
                      class="number"
                    >
                      2
                    </span>
                    <span
                      class="optionCopy"
                    >
                      <span
                        class="optionLine"
                      >
                        <span
                          class="optionLabel"
                        >
                          保留
                        </span>
                        <span
                          class="description"
                        >
                          保持只读成员身份。
                        </span>
                      </span>
                    </span>
                  </button>
                  <div
                    class="customRow"
                  >
                    <span
                      aria-hidden="true"
                      class="number"
                    >
                      <svg
                        data-content="80a2f989"
                        fill="none"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </span>
                    <div
                      class="field customInline"
                    >
                      <div
                        aria-hidden="true"
                        class="fieldMirror"
                      />
                      <textarea
                        class="fieldInput"
                        placeholder="输入你的答案"
                        rows="1"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <footer
                class="footer"
              >
                <div
                  class="pager"
                >
                  <button
                    aria-label="上一题"
                    class="iconButton"
                    disabled=""
                    type="button"
                  >
                    <svg
                      data-content="710b3749"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                  <span
                    class="progress"
                  >
                    1
                    /
                    1
                  </span>
                  <button
                    aria-label="下一题"
                    class="iconButton"
                    disabled=""
                    type="button"
                  >
                    <svg
                      data-content="12556b6e"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
                <div
                  class="feedback"
                  role="status"
                />
                <div
                  class="footerActions"
                >
                  <button
                    class="button outline md"
                    type="button"
                  >
                    跳过本题
                  </button>
                  <button
                    class="button primary md"
                    disabled=""
                    type="button"
                  >
                    提交
                  </button>
                </div>
              </footer>
            </section>
          </div>
        </fieldset>
      </div>
    </section>
  </div>
</div>
`;

exports[`MemberQuestionCard > snapshots the identity-lite banner and the folded strip 2`] = `
<div>
  <div
    class="frame"
    data-folded="true"
    data-question-key="q:q-1"
  >
    <section
      aria-label="远端 · 成员"
      class="card cardFolded"
    >
      <button
        aria-label="远端 · 成员"
        class="foldedBar"
        type="button"
      >
        <span
          class="remoteTag"
        >
          远端
        </span>
        <span
          class="foldedSummary"
        >
          远端 · 成员
        </span>
        <span
          class="foldedMark"
        >
          已收起
        </span>
      </button>
      <div
        class="body bodyHidden"
        data-member-presentation="true"
      >
        <fieldset
          class="mutationScope"
          role="presentation"
        >
          <div
            class="frame"
            data-question-key="q:q-1"
          >
            <section
              aria-labelledby="question-q:q-1-0"
              class="card cardMinimized"
            >
              <header
                class="header"
              >
                <div
                  class="headingBlock"
                >
                  <div
                    class="eyebrow"
                  >
                    成员管理
                  </div>
                  <h2
                    class="title"
                    id="question-q:q-1-0"
                  >
                    将王小明移出项目吗？
                  </h2>
                </div>
                <div
                  class="headerActions"
                >
                  <button
                    aria-expanded="false"
                    aria-label="展开问题卡片"
                    class="iconButton"
                    title="展开问题卡片"
                    type="button"
                  >
                    <svg
                      data-content="f03c266b"
                      fill="none"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                  <button
                    aria-label="放弃整组问题"
                    class="iconButton"
                    title="放弃整组问题"
                    type="button"
                  >
                    <svg
                      data-content="b94f78dd"
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
              </header>
            </section>
          </div>
        </fieldset>
      </div>
    </section>
  </div>
</div>
`;
